kad xcjb sdv